compile/Parser.cpp


#include <wchar.h>
#include "Parser.h"
#include "Scanner.h"


namespace System {


void Parser::SynErr(int n) {
	if (errDist >= minErrDist) errors->SynErr(la->line, la->col, n);
	errDist = 0;
}

void Parser::SemErr(const wchar_t* msg) {
	if (errDist >= minErrDist) errors->Error(t->line, t->col, msg);
	errDist = 0;
}

void Parser::Get() {
	for (;;) {
		t = la;
		la = scanner->Scan();
		if (la->kind <= maxT) { ++errDist; break; }

		if (dummyToken != t) {
			dummyToken->kind = t->kind;
			dummyToken->pos = t->pos;
			dummyToken->col = t->col;
			dummyToken->line = t->line;
			dummyToken->next = NULL;
			coco_string_delete(dummyToken->val);
			dummyToken->val = coco_string_create(t->val);
			t = dummyToken;
		}
		la = t;
	}
}

void Parser::Expect(int n) {
	if (la->kind==n) Get(); else { SynErr(n); }
}

void Parser::ExpectWeak(int n, int follow) {
	if (la->kind == n) Get();
	else {
		SynErr(n);
		while (!StartOf(follow)) Get();
	}
}

bool Parser::WeakSeparator(int n, int syFol, int repFol) {
	if (la->kind == n) {Get(); return true;}
	else if (StartOf(repFol)) {return false;}
	else {
		SynErr(n);
		while (!(StartOf(syFol) || StartOf(repFol) || StartOf(0))) {
			Get();
		}
		return StartOf(syFol);
	}
}

void Parser::PROGRAMA() {
		Expect(5 /* "program" */);
		Expect(6 /* "{" */);
		InitDeclarations(); 
		action->beginProgram(); 
		while (la->kind == 8 /* "global" */) {
			GLOBAL();
		}
		BLOQUE();
		Expect(7 /* "}" */);
		action->endProgram();
		action->tab->removeAllLocals();
<<<<<<< HEAD
		action->showCuadruplo();
=======
		/*action->showCuadruplo();*/
>>>>>>> 82b17707f2aee85209224db4403e72be6eb179f1
		
		action->createObject();
}

void Parser::GLOBAL() {
		wchar_t* name; int type; 
		Expect(8 /* "global" */);
		TIPO(type);
		IDENTI(name);
		action->addGlobal(name, type, var);  
		if (la->kind == 9 /* "[" */) {
			Get();
			Expect(_integer);
			Expect(10 /* "]" */);
		}
		while (la->kind == 11 /* "," */) {
			Get();
			IDENTI(name);
			action->addGlobal(name, type, var); 
			if (la->kind == 9 /* "[" */) {
				Get();
				Expect(_integer);
				Expect(10 /* "]" */);
			}
		}
		Expect(12 /* ";" */);
}

void Parser::BLOQUE() {
		while (la->kind == 18 /* "module" */) {
			MODULE();
		}
		MAIN();
}

void Parser::TIPO(int  &type) {
		if (la->kind == 13 /* "int" */) {
			Get();
			type =entero; 
		} else if (la->kind == 14 /* "float" */) {
			Get();
			type=flotante; 
		} else SynErr(63);
}

void Parser::IDENTI(wchar_t* &name) {
		Expect(_id);
		name =  coco_string_create(t->val); 
}

void Parser::MODULE() {
		wchar_t* name; int typemod; int no; int can; 
		Expect(18 /* "module" */);
		TIPO_MOD(typemod);
		IDENTI(name);
		action->addGlobal(name, undefined, function); action->addNameFunction(name);
		action->addTypeFunction(typemod); 
		Expect(16 /* "(" */);
		if (la->kind == 13 /* "int" */ || la->kind == 14 /* "float" */) {
			PARAMETROS();
		}
		action->addNoParameters(); 
		Expect(17 /* ")" */);
		Expect(6 /* "{" */);
		while (la->kind == 13 /* "int" */ || la->kind == 14 /* "float" */) {
			LOCAL();
		}
		action->addNoLocals(); 
		action->addContCuadruplo(); 
		while (StartOf(1)) {
			ESTATUTO();
		}
		if (la->kind == 20 /* "return" */) {
			RETORNO();
		}
		action->generateRetorno(); 
		Expect(7 /* "}" */);
		action->removeLocals(); 
}

void Parser::MAIN() {
		Expect(15 /* "main" */);
		Expect(16 /* "(" */);
		Expect(17 /* ")" */);
		int can;   
		Expect(6 /* "{" */);
		action->beginMain(); 
		while (la->kind == 13 /* "int" */ || la->kind == 14 /* "float" */) {
			LOCAL();
		}
		while (StartOf(1)) {
			ESTATUTO();
		}
		Expect(7 /* "}" */);
		action->removeLocals(); 
}

void Parser::LOCAL() {
		wchar_t* name; int type; 
		TIPO(type);
		IDENTI(name);
		action->addLocal(name, type, var);  
		if (la->kind == 9 /* "[" */) {
			Get();
			Expect(_integer);
			Expect(10 /* "]" */);
		}
		while (la->kind == 11 /* "," */) {
			Get();
			IDENTI(name);
			action->addLocal(name, type, var); 
			if (la->kind == 9 /* "[" */) {
				Get();
				Expect(_integer);
				Expect(10 /* "]" */);
			}
		}
		Expect(12 /* ";" */);
}

void Parser::ESTATUTO() {
		switch (la->kind) {
		case 28 /* "read" */: {
			LECTURA();
			break;
		}
		case 31 /* "draw" */: {
			GRAFICO();
			break;
		}
		case _id: {
			ASIGMODULO();
			break;
		}
		case 23 /* "if" */: {
			CONDICION();
			break;
		}
		case 29 /* "print" */: {
			ESCRITURA();
			break;
		}
		case 26 /* "while" */: {
			CICLO();
			break;
		}
		case 27 /* "do" */: {
			CICLO_DO();
			break;
		}
		default: SynErr(64); break;
		}
}

void Parser::TIPO_MOD(int &typemod) {
		if (la->kind == 13 /* "int" */ || la->kind == 14 /* "float" */) {
			int type;  
			TIPO(type);
			typemod = type; 
		} else if (la->kind == 19 /* "void" */) {
			Get();
			typemod = undefined; 
		} else SynErr(65);
}

void Parser::PARAMETROS() {
		PARAM_COMA();
		while (la->kind == 11 /* "," */) {
			Get();
			PARAM_COMA();
		}
}

void Parser::RETORNO() {
		Expect(20 /* "return" */);
		EXP();
		Expect(12 /* ";" */);
}

void Parser::PARAM_COMA() {
		wchar_t* name; int type; int can; 
		TIPO(type);
		IDENTI(name);
		action->addLocal(name, type, para);
		action->addParameter(type); 
}

void Parser::EXP() {
		int term; 
		TERMINO();
		if (la->kind == 21 /* "-" */ || la->kind == 22 /* "+" */) {
			TERM_OP(term);
			action->addStackOpe(term); 
			EXP();
		}
		action->createCuadroOpeTerm(); 
}

void Parser::VARCTE() {
		double signo=1.00; double number; Direction *dir; int tipo;
		if (la->kind == 21 /* "-" */ || la->kind == 22 /* "+" */) {
			if (la->kind == 21 /* "-" */) {
				Get();
				signo=-1; 
			} else {
				Get();
				
			}
		}
		if (la->kind == _integer) {
			Get();
			number=wcstof((coco_string_create(t->val)), NULL); 
			tipo=entero; 
		} else if (la->kind == _floating) {
			Get();
			number=wcstof((coco_string_create(t->val)), NULL);
			tipo=flotante; 
		} else SynErr(66);
		dir=action->memory->save(3,tipo, number*signo);
		action->dir->push(dir); 
}

void Parser::LECTURA() {
		wchar_t* name; Variable *obj; 
		Expect(28 /* "read" */);
		Expect(16 /* "(" */);
		IDENTI(name);
		obj=action->find(name);
		action->createCuadrRead(obj->dir->direction, obj->type); 
		Expect(17 /* ")" */);
		Expect(12 /* ";" */);
}

void Parser::GRAFICO() {
		int figure; 
		Expect(31 /* "draw" */);
		FIGURA(figure);
		action->beginDraw(figure); 
		Expect(32 /* ":" */);
		while (StartOf(2)) {
			ATRIBUTOS();
		}
		Expect(33 /* "end" */);
		action->endDraw();
}

void Parser::ASIGMODULO() {
		wchar_t* name; Variable *obj; 
		IDENTI(name);
		if (la->kind == 16 /* "(" */) {
			action->findFunction(name); 
			LLAMAR_MODULO();
		} else if (la->kind == 9 /* "[" */ || la->kind == 25 /* "=" */) {
			obj=action->find(name);
			action->addStackDir(obj->dir->direction,obj->type); 
			ASIGNACION();
		} else SynErr(67);
}

void Parser::CONDICION() {
		Expect(23 /* "if" */);
		Expect(16 /* "(" */);
		EXPRESION();
		Expect(17 /* ")" */);
		action->createGotoFalseCond(); 
		Expect(6 /* "{" */);
		while (StartOf(1)) {
			ESTATUTO();
		}
		Expect(7 /* "}" */);
		if (la->kind == 24 /* "else" */) {
			Get();
			action->createGotoFinCond(); 
			Expect(6 /* "{" */);
			while (StartOf(1)) {
				ESTATUTO();
			}
			Expect(7 /* "}" */);
		}
		action->createEndCond(); 
}

void Parser::ESCRITURA() {
		Expect(29 /* "print" */);
		Expect(16 /* "(" */);
		EXP();
		action->createCuadrPrint(); 
		while (la->kind == 30 /* "|" */) {
			Get();
			EXP();
			action->createCuadrPrint(); 
		}
		Expect(17 /* ")" */);
		Expect(12 /* ";" */);
}

void Parser::CICLO() {
		Expect(26 /* "while" */);
		action->addStackLeapActual(); 
		Expect(16 /* "(" */);
		EXPRESION();
		Expect(17 /* ")" */);
		action->createGotoFalWhile(); 
		Expect(6 /* "{" */);
		while (StartOf(1)) {
			ESTATUTO();
		}
		action->createEndWhile(); 
		Expect(7 /* "}" */);
}

void Parser::CICLO_DO() {
		Expect(27 /* "do" */);
		action->addStackLeapActual(); 
		Expect(6 /* "{" */);
		while (StartOf(1)) {
			ESTATUTO();
		}
		Expect(7 /* "}" */);
		Expect(26 /* "while" */);
		Expect(16 /* "(" */);
		EXPRESION();
		Expect(17 /* ")" */);
		action->createWhileDo(); 
		Expect(12 /* ";" */);
}

void Parser::EXPRESION() {
		int log; 
		EXP_LOG();
		while (la->kind == 57 /* "and" */ || la->kind == 58 /* "or" */) {
			LOG_OPE(log);
			action->addStackOpe(log); 
			EXP_LOG();
		}
		action->createCuadroOpeLog(); 
}

void Parser::EXP_LOG() {
		int rel; 
		EXP();
		if (StartOf(3)) {
			RELACIONAL(rel);
			action->addStackOpe(rel); 
			EXP();
		}
		action->createCuadroOpeRel(); 
}

void Parser::LOG_OPE(int &log) {
		if (la->kind == 57 /* "and" */) {
			Get();
			log=log_and;
		} else if (la->kind == 58 /* "or" */) {
			Get();
			log=log_or; 
		} else SynErr(68);
}

void Parser::RELACIONAL(int &rel) {
		switch (la->kind) {
		case 51 /* "==" */: {
			Get();
			rel=eq;
			break;
		}
		case 52 /* "<>" */: {
			Get();
			rel=ne;
			break;
		}
		case 53 /* "<=" */: {
			Get();
			rel=lte;
			break;
		}
		case 54 /* ">=" */: {
			Get();
			rel=gte;
			break;
		}
		case 55 /* "<" */: {
			Get();
			rel=lt;
			break;
		}
		case 56 /* ">" */: {
			Get();
			rel=gt;;
			break;
		}
		default: SynErr(69); break;
		}
}

void Parser::LLAMAR_MODULO() {
		Expect(16 /* "(" */);
		action->createERA(); 
		if (StartOf(4)) {
			EXP();
			action->createParameter(); 
			while (la->kind == 11 /* "," */) {
				Get();
				EXP();
				action->createParameter(); 
			}
		}
		action->checkParameter(); 
		Expect(17 /* ")" */);
		action->createGotoSub();
		Expect(12 /* ";" */);
}

void Parser::ASIGNACION() {
		wchar_t* name; 
		if (la->kind == 9 /* "[" */) {
			Get();
			if (la->kind == _id) {
				IDENTI(name);
			} else if (la->kind == _integer) {
				Get();
			} else SynErr(70);
			Expect(10 /* "]" */);
		}
		Expect(25 /* "=" */);
		EXP();
		Expect(12 /* ";" */);
		action->createCuadrAlloca(); 
}

void Parser::PARENTESIS() {
		Expect(16 /* "(" */);
		action->addFake();
		action->createERA(); 
		if (StartOf(4)) {
			EXP();
			action->createParameter(); 
			while (la->kind == 11 /* "," */) {
				Get();
				EXP();
				action->createParameter(); 
			}
		}
		action->checkParameter(); 
		Expect(17 /* ")" */);
		action->removeFake();
		action->createGotoSub();  
}

void Parser::TERMINO() {
		int fact; 
		FACTOR();
		if (la->kind == 59 /* "*" */ || la->kind == 60 /* "/" */ || la->kind == 61 /* "%" */) {
			FACTOR_OP(fact);
			action->addStackOpe(fact); 
			TERMINO();
		}
		action->createCuadroOpeFact(); 
}

void Parser::TERM_OP(int &term) {
		if (la->kind == 22 /* "+" */) {
			Get();
			term=plus;
		} else if (la->kind == 21 /* "-" */) {
			Get();
			term=minus;
		} else SynErr(71);
}

void Parser::FACTOR() {
		if (la->kind == _id) {
			IDENTIFICADOR_I();
		} else if (la->kind == 16 /* "(" */) {
			Get();
			action->addFake(); 
			EXPRESION();
			Expect(17 /* ")" */);
			action->removeFake(); 
		} else if (StartOf(5)) {
			VARCTE();
		} else SynErr(72);
}

void Parser::FACTOR_OP(int &fact) {
		if (la->kind == 59 /* "*" */) {
			Get();
			fact=multiply;
		} else if (la->kind == 60 /* "/" */) {
			Get();
			fact=divide;
		} else if (la->kind == 61 /* "%" */) {
			Get();
			fact=module;
		} else SynErr(73);
}

void Parser::IDENTIFICADOR_I() {
		wchar_t* name; Variable *obj; int signo; Direction *dir; 
		IDENTI(name);
		if (StartOf(6)) {
			obj=action->find(name); 
			action->addStackDir(obj->dir->direction,obj->type); 
		} else if (la->kind == 16 /* "(" */) {
			action->findFunction(name); 
			PARENTESIS();
		} else SynErr(74);
}

void Parser::FIGURA(int &figure) {
		switch (la->kind) {
		case 34 /* "point" */: {
			Get();
			figure=41;
			break;
		}
		case 35 /* "line" */: {
			Get();
			figure=42;
			break;
		}
		case 36 /* "triangle" */: {
			Get();
			figure=43;
			break;
		}
		case 37 /* "square" */: {
			Get();
			figure=44;
			break;
		}
		case 38 /* "circle" */: {
			Get();
			figure=45;
			break;
		}
		case 39 /* "star" */: {
			Get();
			figure=46;
			break;
		}
		case 40 /* "pentagon" */: {
			Get();
			figure=47;
			break;
		}
		case 41 /* "hexagon" */: {
			Get();
			figure=48;
			break;
		}
		case 42 /* "rhomboid" */: {
			Get();
			figure=49;
			break;
		}
		default: SynErr(75); break;
		}
}

void Parser::ATRIBUTOS() {
		if (StartOf(7)) {
			ATRIBUTO_ENTERO();
		} else if (StartOf(8)) {
			ATRIBUTO_STRING();
		} else SynErr(76);
		Expect(12 /* ";" */);
}

void Parser::ATRIBUTO_ENTERO() {
		int attribute; 
		if (la->kind == 43 /* "x_position" */) {
			Get();
			attribute=31;
		} else if (la->kind == 44 /* "y_position" */) {
			Get();
			attribute=32;
		} else if (la->kind == 45 /* "rotate" */) {
			Get();
			attribute=33;
		} else if (la->kind == 46 /* "rotateLeft" */) {
			Get();
			attribute=34;
		} else SynErr(77);
		Expect(25 /* "=" */);
		EXP();
		action->addAtributeInt(attribute);
}

void Parser::ATRIBUTO_STRING() {
		wchar_t* name; int attribute; 
		if (la->kind == 47 /* "size" */) {
			Get();
			attribute=35;
		} else if (la->kind == 48 /* "thick" */) {
			Get();
			attribute=36;
		} else if (la->kind == 49 /* "colorThick" */) {
			Get();
			attribute=37;
		} else if (la->kind == 50 /* "colorFigure" */) {
			Get();
			attribute=38;
		} else SynErr(78);
		Expect(25 /* "=" */);
		CADENA(name);
		action->addAtributeString(attribute, name);
}

void Parser::CADENA(wchar_t* &name) {
		Expect(_chain);
		name =  coco_string_create(t->val); 
}




// If the user declared a method Init and a mehtod Destroy they should
// be called in the contructur and the destructor respctively.
//
// The following templates are used to recognize if the user declared
// the methods Init and Destroy.

template<typename T>
struct ParserInitExistsRecognizer {
	template<typename U, void (U::*)() = &U::Init>
	struct ExistsIfInitIsDefinedMarker{};

	struct InitIsMissingType {
		char dummy1;
	};
	
	struct InitExistsType {
		char dummy1; char dummy2;
	};

	// exists always
	template<typename U>
	static InitIsMissingType is_here(...);

	// exist only if ExistsIfInitIsDefinedMarker is defined
	template<typename U>
	static InitExistsType is_here(ExistsIfInitIsDefinedMarker<U>*);

	enum { InitExists = (sizeof(is_here<T>(NULL)) == sizeof(InitExistsType)) };
};

template<typename T>
struct ParserDestroyExistsRecognizer {
	template<typename U, void (U::*)() = &U::Destroy>
	struct ExistsIfDestroyIsDefinedMarker{};

	struct DestroyIsMissingType {
		char dummy1;
	};
	
	struct DestroyExistsType {
		char dummy1; char dummy2;
	};

	// exists always
	template<typename U>
	static DestroyIsMissingType is_here(...);

	// exist only if ExistsIfDestroyIsDefinedMarker is defined
	template<typename U>
	static DestroyExistsType is_here(ExistsIfDestroyIsDefinedMarker<U>*);

	enum { DestroyExists = (sizeof(is_here<T>(NULL)) == sizeof(DestroyExistsType)) };
};

// The folloing templates are used to call the Init and Destroy methods if they exist.

// Generic case of the ParserInitCaller, gets used if the Init method is missing
template<typename T, bool = ParserInitExistsRecognizer<T>::InitExists>
struct ParserInitCaller {
	static void CallInit(T *t) {
		// nothing to do
	}
};

// True case of the ParserInitCaller, gets used if the Init method exists
template<typename T>
struct ParserInitCaller<T, true> {
	static void CallInit(T *t) {
		t->Init();
	}
};

// Generic case of the ParserDestroyCaller, gets used if the Destroy method is missing
template<typename T, bool = ParserDestroyExistsRecognizer<T>::DestroyExists>
struct ParserDestroyCaller {
	static void CallDestroy(T *t) {
		// nothing to do
	}
};

// True case of the ParserDestroyCaller, gets used if the Destroy method exists
template<typename T>
struct ParserDestroyCaller<T, true> {
	static void CallDestroy(T *t) {
		t->Destroy();
	}
};

void Parser::Parse() {
	t = NULL;
	la = dummyToken = new Token();
	la->val = coco_string_create(L"Dummy Token");
	Get();
	PROGRAMA();
	Expect(0);
}

Parser::Parser(Scanner *scanner) {
	maxT = 62;

	ParserInitCaller<Parser>::CallInit(this);
	dummyToken = NULL;
	t = la = NULL;
	minErrDist = 2;
	errDist = minErrDist;
	this->scanner = scanner;
	errors = new Errors();
}

bool Parser::StartOf(int s) {
	const bool T = true;
	const bool x = false;
